# image-converter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow_dummy.cpp  mainwindow_dummy.h
pages/: main_page.cpp  main_page.h  pdf_page.cpp  pdf_page.h  pdf_page_dummy.cpp  pdf_page_dummy.h
resources/: icon_type.h  icons.qrc  input_type.h
styles/: colors.h  text_style.h
widgets/: button_action.cpp  button_action.h  button_sidebar_active.cpp  button_sidebar_active.h  button_sidebar_widget.cpp  button_sidebar_widget.h  button_toggle.cpp  button_toggle.h  drop_file_widget.cpp  drop_file_widget.h  input_dropdown.cpp  input_dropdown.h  input_field.cpp  input_field.h  input_invalid.cpp  input_invalid.h  input_upload.cpp  input_upload.h  input_upload_widget.h  input_widget.cpp  input_widget.h  left_panel.cpp  left_panel.h  message_box_widget.cpp  message_box_widget.h  sidebar_panel.cpp  sidebar_panel.h  slider_widget.cpp  slider_widget.h
